# ai-architect-portfolio

./: .gitignore  portfolio-summary.md  readme.md
01-enterprise-rag-systems/: .comment  readme.md
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/: .env.example  README.md  demo-guide.md  docker-compose.yml  main.py  pyproject.toml
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/backend/: requirements.txt
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/backend/api/: main.py  schemas.py
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/backend/core/: config.py
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/backend/refinery/: embedder.py  engine.py  llm_client.py
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/backend/tests/: test_api.py  test_engine.py  test_strategies.py
01-enterprise-rag-systems/L1-query-refinery-pre-retrieval-optimization/frontend/: app.py
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/: .env.example  README.md  demo-guide.md  docker-compose.yml  main.py  pyproject.toml
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/backend/: Dockerfile  requirements.txt
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/backend/api/: main.py  schemas.py
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/backend/core/: config.py
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/backend/data/: sample_corpus.py
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/backend/refiner/: cross_encoder.py  embedder.py  engine.py  llm_client.py  retriever.py
01-enterprise-rag-systems/L2-result-refiner-post-retrieval-optimization/frontend/: app.py
01-enterprise-rag-systems/L3-hybrid-multi-route-retrieval/: .env.example  .gitignore  README.md  demo-guide.md  docker-compose.yml  main.py  pyproject.toml
01-enterprise-rag-systems/L3-hybrid-multi-route-retrieval/backend/: Dockerfile  requirements.txt
01-enterprise-rag-systems/L3-hybrid-multi-route-retrieval/frontend/: app.py  requirements.txt
01-enterprise-rag-systems/L4-agentic-self-guided-rag/: .env.example  README.md  demo-guide.md  docker-compose.yml  main.py  pyproject.toml
01-enterprise-rag-systems/L4-agentic-self-guided-rag/backend/: Dockerfile  requirements.txt
01-enterprise-rag-systems/L4-agentic-self-guided-rag/frontend/: Dockerfile  app.py  requirements.txt
(+147 files in other folders)
