[project]
name = "l1-query-refinery-pre-retrieval-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.0",
    "langchain-groq==0.2.1",
    "langchain-huggingface==0.1.2",
    "pydantic-settings==2.5.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "requests>=2.34.2",
    "sentence-transformers==3.1.0",
    "streamlit>=1.56.0",
    "uvicorn[standard]==0.30.0",
]
