[project]
name = "l2-result-refiner"
version = "0.1.0"
description = "Post-retrieval optimization: reranking, context compression, small-to-big, sliding window"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
