[project]
name = "l3-hybrid-multi-route-retrieval"
version = "0.1.0"
description = "Hybrid retrieval (sparse + dense + graph) with multi-route query routing, RRF/weighted/contextual fusion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "networkx>=3.0",
    "langchain-groq>=1.1.2",
    "streamlit>=1.58.0",
    "httpx>=0.28.1",
]
